[package]
authors = ["Taylor C. Richberger <taywee@gmx.com>"]
description = "A brace expansion plugin compatible with Bash for nushell"
repository = "https://github.com/Taywee/nu-plugin-bexpand"
edition = "2021"
license = "MPL-2.0"
name = "nu-plugin-bexpand"
categories = ["command-line-interface", "parser-implementations"]
keywords = ["parser", "shell", "template", "string"]
readme = "README.md"
version = "1.3.2"

[dependencies]
bexpand = "1.2.0"
nu-plugin = "0.90.1"

[dependencies.nu-protocol]
version = "0.90.1"
features = ["plugin"]

[profile.release]
panic = 'abort'
