[package]
authors = ["Taylor C. Richberger <taylor@axfive.net>"]
description = "A brace expansion plugin compatible with Bash for nushell"
repository = "https://forge.axfive.net/Taylor/nu-plugin-bexpand"
edition = "2021"
license = "MPL-2.0"
name = "nu-plugin-bexpand"
categories = ["command-line-interface", "parser-implementations"]
keywords = ["parser", "shell", "template", "string"]
readme = "README.md"
version = "1.3.8"

[dependencies]
bexpand = "1.2.0"
nu-plugin = "0.95.0"

[dependencies.nu-protocol]
version = "0.95.0"
features = ["plugin"]

[profile.release]
panic = 'abort'
